Anonymous | Login | 2021-01-16 06:31 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0032057 | Open CASCADE | [OCCT] OCCT:Coding | public | 2021-01-14 12:50 | 2021-01-14 14:09 | ||||||||
Reporter | bugmaster | ||||||||||||
Assigned To | bugmaster | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | reviewed | Resolution | open | ||||||||||
Platform | iOS | OS | OS Version | ||||||||||
Product Version | [OCCT] 7.5.0 | ||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0032057: Coding Rules - eliminate CLang warning -Wunused-parameter when targeting iOS | ||||||||||||
Description | Configuration: arm64 http://jenkins-test-11.nnov.opencascade.com/view/master_master/view/OCCT%20compile/job/master_master-OCCT-MacOS-arm64-opt-compile/25/warnings10Result/ [^] ios-sumulator http://jenkins-test-11.nnov.opencascade.com/view/master_master/view/OCCT%20compile/job/master_master-OCCT-MacOS-ios-simulator-opt-compile/7/warnings10Result/ [^] /OCCT_SRC/src/OpenGl/OpenGl_Context.cxx:774:74: warning: unused parameter 'theInterval' [-Wunused-parameter] Standard_Boolean OpenGl_Context::SetSwapInterval (const Standard_Integer theInterval) ^ /OCCT_SRC/src/Cocoa/Cocoa_Window.mm:98:52: warning: unused parameter 'theTitle' [-Wunused-parameter] Cocoa_Window::Cocoa_Window (const Standard_CString theTitle, | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | |||||||||||||
Attached Files | |||||||||||||
![]() |
|||
Date Modified | Username | Field | Change |
2021-01-14 12:50 | bugmaster | New Issue | |
2021-01-14 12:50 | bugmaster | Assigned To | => kgv |
2021-01-14 12:50 | bugmaster | Status | new => assigned |
2021-01-14 14:06 | kgv | Summary | Coding - Warnings on compilation for iOS => Coding Rules - eliminate CLang warning -Wunused-parameter when targeting iOS |
2021-01-14 14:06 | kgv | Description Updated | View Revisions |
2021-01-14 14:09 | kgv | Note Added: 0098119 | |
2021-01-14 14:09 | kgv | Assigned To | kgv => bugmaster |
2021-01-14 14:09 | kgv | Status | assigned => resolved |
2021-01-14 14:09 | kgv | Status | resolved => reviewed |
Copyright © 2000 - 2021 MantisBT Team |