0032057: Coding Rules - eliminate CLang warning -Wunused-parameter when targeting iOS

Cocoa_Window::Cocoa_Window()/OpenGl_Context::SetSwapInterval() have been corrected to suppress warning.